Scrollbar fix for IE.

--- a/se-web-ui/src/main/resources/catalog/views/swe/less/gn_search_swe.less
+++ b/se-web-ui/src/main/resources/catalog/views/swe/less/gn_search_swe.less
@@ -442,10 +442,7 @@ input[type=range]:focus::-ms-fill-lower {
 input[type=range]:focus::-ms-fill-upper {
     background: #ccc;
 }
-//Chrome background color
-input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0px 1000px white inset;
-}
+
 // filter block arrows
 
 // filter block arrows and text
@@ -1092,6 +1089,7 @@ html, body {
 // header
 body {
   padding-top: 60px;
+  -ms-overflow-style:scrollbar;
 }
 .header-cont {
   position: fixed;
